# robot

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml
src/: runner.py
src/apps/robot/: service.py
src/exceptions/: exceptions.py
src/models/: models.py
src/utils/: logger.py
tests/apps/robot/: conftest.py  test_service.py
