[tool.poetry]
name = "robot"
version = "0.1.0"
description = ""
authors = ["francis <c480765125@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
pandas = "^2.2.2"
pytest = "^8.2.2"
pre-commit = "^3.7.1"
pyright = "^1.1.372"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
